# SuperTennisAI

./: .gitignore  README.md  pyproject.toml
games/SuperTennis-Snes/: MatchGame.LosingJohn.state  MatchGame.WinningJohn.state  SetGame.Winning.Singles.MattvsBrian.3-set.Lawn.state  SetGame.Winning.Singles.MattvsRich.3-set.Hard.state  SetGame.Winning.Singles.MattvsRob.3-set.Hard.state  SuperTennis.OpponentServe.Singles.MattvsBarb.1-set.Hard.state  data.json  metadata.json  penalties.lua  scenario.json  scenario_lua.json  script.lua  secondary_rewards.lua
games/SuperTennis-Snes/all_initial_states/: SuperTennis.Singles.PlayerServes.PlayerBot.MattvsBarb.1-set.Hard.state  SuperTennis.Singles.PlayerServes.PlayerBot.MattvsDebbie.1-set.Clay.state  SuperTennis.Singles.PlayerServes.PlayerBot.MattvsErin.1-set.Lawn.state  SuperTennis.Singles.PlayerServes.PlayerBot.MattvsKim.1-Set.Hard.state  SuperTennis.Singles.PlayerServes.PlayerBot.MattvsRich.1-set.Clay.state  SuperTennis.Singles.PlayerServes.PlayerBot.MattvsSteve.1-set.Lawn.state  SuperTennis.Singles.PlayerServes.PlayerBot.MattvsYuka.1-set.Clay.state
games/SuperTennis-Snes/hard-court_easy-opponents_states/: SuperTennis.Singles.PlayerServes.PlayerBot.MattvsRich.1-set.Hard.state
notebooks/: 4_train_airl.ipynb  5a_train_preference_comparisons_with_cnn.ipynb  record_trajectories.ipynb
shell/: train_adamms_family.sh
src/: callbacks.py  config.py  env_helpers.py  test_agent.py  train_tennis_ppo.py  wrappers.py
src/hp_tuning/: optuna_utils.py  tune_hyperparams.py
src/networks/: impala_cnn.py  residual_extractor.py
(+11 files in other folders)
