[tool.poetry]
name = "supertennisai"
version = "0.1.0"
description = ""
authors = ["Javier <javier.smith.dlc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
stable-baselines3 = ">=2.2.1,<2.3.0"
stable-retro = "^0.9.2"
optuna = "^4.2.1"
moviepy = "^2.1.2"
imitation = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
